_scss/style.scss
	//  Theme made my Mobiuszero. 
//  bulid version 0.5.0
//  
// -------------------------
// 	Table of contents
// 	-----------------
//  i. imports
// 	ii. variables
// 		- Background
// 		- Font Family 
// 		- Font Colors
// 		- Bullet Icons And Colors
//  iii. functions
//  iv. Miscellaneous
// 	1. Font 
// 	2. Layout
// 	3. Unordered & Ordered Lists
//  4. Footer
//  5. Modal
//  6. Portfolio Section
//  7. Main Menu 
//  8. Title Section 
// 	9. Contact Section 
// 10. Content Section
//  
// ----------------------------
// i. imports
// ************************
@import "bourbon"; //multipurpose functions
@import "bootstrap";
@import "font-awesome"; 
@import "web-fonts"; // Used with google fonts // 
@include web-fonts(("Fredoka One"), (("Open Sans": ("400","700")), ("Droid Sans": ("400","700"))));
@import "sass_mq"; //media queries function call
// ii. variables 
// ************************
// - Background
	$base_bgcolor: #212121;
	$secondary_bgcolor: #ffffff;
	$image_titlebg: url('../img/Hello-World.png');
// - Font Family
	$base_font-family: 'Droid Sans', sans-serif;
	$heading_font-family: 'Open Sans', sans-serif;
	$fa-font-family:  'FontAwesome';
//  - Font Colors
	$base_fontColor: #212121;
	$sub_fontColor: #ffffff; 
	$heading_fontColor: #1c1c1c;
	$text-danger_fontColor: #d90000;
//  - Bullet color
	$fa-bullets_check_color: #128915;

// iii. functions
// ************************
	@mixin border-radius($box) {
		@include prefixer(border-radius, $box, webkit moz spec);
	}
	@mixin button-style($btn_color) {
		text-decoration: none;
		font-family: $heading_font-family;
		font-weight: 900;
	    white-space: normal;
		@include mq($from: mobile,$until:tablet){
			font-size: em(18);
		}
		border: none;
		position: relative;
	    @include transition(all 300ms ease);
	    @include box-shadow(0 6px darken($btn_color,25%));
		&:after {
			content: "";
			position: absolute;
			z-index: -1;
			@include transition(all 300ms ease);
		}
		&:hover {
			top: 2px;
			@include box-shadow(0 4px darken($btn_color,20%));
		}
		&:active {
			top: 6px;
			border: none;
			@include box-shadow(0 0 darken($btn_color,15%));
		}
	}

// 1. Font 
// ========================
	html {
		margin: 0;
		padding: 0;
		height: 100%
	}
	body {
		font-family: $base_font-family;
		font-size: 16px;
		color: lighten($base_fontColor, 20%);
		font-kerning: normal;
		height: 100%
	}
	p {
		font-size: em(18);
	}
	.module {
		& 	a {
			text-decoration: underline;
		}
	}
	@for $heading from 1 through 6 {
		h#{$heading},.h#{$heading} {
			font-family: $heading_font-family;
			font-weight: 800;
			line-height: 1.30;
			@include margin(null null 3% null);
		}
	}
	// I dont like the way I have done this and I have to revist this in the future. 
	$heading_sizes: ( 2: 40px, 3: 36px, 4: 26px, 5: 18px, 6: 16px );
	@each $heading, $value in $heading_sizes {
		h#{$heading}, .h#{$heading} {
			font-size: em($value);
			color: lighten($base_fontColor, 10%);
		}
	}
	// font styles
	.text-underline {
		text-decoration: underline;
	}
// 2. Layout
// =======================
	body {
	    overflow-x: hidden;
	}
	.module {
		width: 100%;
		@include padding(2.5% null 4.5% null);
	}
// title section  
	section.title { 
		background-color: darken($base_bgcolor, 5%);
		background-image: $image_titlebg;
		background-position: center center;
		background-size: cover;
		background-repeat: no-repeat;
		background-attachment: fixed;
	}
// main content section 
	section.content {
		min-height: 100vh;
		background-color: $secondary_bgcolor;
	}
// portfolio section 
	section.portfolio {
		background-color: darken($base_bgcolor, 5%); 
		background-attachment: fixed;
	}
//  blockquote 
blockquote {
	position: relative;
	margin-top: em(25);
	margin-bottom: em(25);
	& p::before {
		font-family: $fa-font-family; 
		content: "\f10d \00a0";
		font-size: em(31.5);
	    position: absolute;
	    top: em(-3px);
	    left: em(10px);
	    color: lighten($base_fontColor, 75%)
	}
	& p {
		padding-left: em(42.5px);
		text-align: justify;
	}
	& p::after {
		font-family: $fa-font-family; 
		content: "\00a0 \f10e";
		font-size: em(25.5);
		position: absolute;
		padding-left: em(5px);
	    color: lighten($base_fontColor, 75%)
	}
	& footer { // since I have used "footer" tag for the sites footer background. 
		background: rgba($base_bgcolor, 0.0); 
	}
}
// 3. Unordered & Ordered Lists
// =========================

	ul.fa-bullets li {
		list-style: none;
		@include margin (1.5% null null 3.5%);
	}

	ul.fa-bullets > li:before {
	    @include position(absolute, null null null 5.05%);
	    font-size: em(20);
		font-family: $fa-font-family;		
	}

	ul.fa-bullets.icon--check > li:before {
			content: '\f00c';
			color: $fa-bullets_check_color;
	}

	ul.fa-bullets.icon--circled-check > li:before {
			content: '\f058';
			color: $fa-bullets_check_color;
	}

	ol.big-number {
		margin-top: 2.5%;
		counter-reset: big-numbers;
		list-style: none;
		& li {
			margin-bottom: 5.5%;
			margin-left: 3.55%;
			&:last-child {
				margin-bottom: 0.5%;
			}
		}
		& li:before {
			content: counter(big-numbers) ". ";
			counter-increment: big-numbers;
			font-size: em(33);
			font-weight: 700;
			position: absolute;
			left: 4.0%;
			margin-top: -1.7%;
		}
	}
// 4. Footer 
// =========================
	footer {
		@include padding (1.25% null 1.25% null);
		color: $sub_fontColor;
		background: $base_bgcolor;
		& ul {
			list-style: none;
			padding: 0;
			margin: 0;
		}
		& ul li {
			display: inline;
			@include padding (null 1% null 2%);
			border-left: 1px solid #fff;
		}
		& ul li:first-child{
			padding-left: 0%;
			border-left: none;
		}
		& li a {
			color: $sub_fontColor;
		}
		& p {
			text-align: justify;
		}

	}
// 5. Modals 
// =========================
	.modal-footer, .modal-header {
		border-top: none;
		border-bottom: none;
	}
/* ... */

